# Passcrypto

./: Cargo.toml  README.md
src/: aes256.rs  check  db.rs  encrypt.rs  file.rs  main.rs  pass.rs  server.rs  ui.rs
src/libs/: aes256.rs  file.rs  mod.rs  net.rs  pass.rs
src/server/: file.rs  pass.rs
