[package]
name = "passcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
clipboard = "0.5.0"
cursive = "0.20.0"
dirs = "5.0.0"
json = "0.12.4"
openssl = "0.10.63"
openssl-sys = "0.9.99"
rand = "0.8.5"
rpassword = "7.3.1"
sha2 = "0.10.6"
